fix: modify for the scaffolding test NG on CI